--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -1,155 +1,89 @@
-@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap");
 
 @font-face {
-    font-family: 'eurostile';
-    src: url('../fonts/EurostileExtended-Black.woff') format('woff'),
-         url('../fonts/EurostileExtended-Black.woff2') format('woff2');
+  font-family: "bimbo_jve";
+  src: url("../fonts/Bimbo_JVE.ttf") format("ttf");
+}
+@font-face {
+  font-family: "alphakind";
+  src: url("../fonts/Alphakind.ttf") format("ttf");
+}
+@font-face {
+  font-family: "modules";
+  src: url("../fonts/modules.ttf") format("ttf"),
+    url("../fonts/modules.woff") format("woff");
+}
+@font-face {
+  font-family: "socicon";
+  src: url("../fonts/Socicon.woff") format("woff"),
+    url("../fonts/Socicon.woff2") format("woff2");
 }
 
 :root {
-    --main-color: #d02a2a;
+  --main-color: #d02a2a;
 }
 
-body{
-    background-color: #000;
-    color: #fff;
-    font-family: 'Roboto', sans-serif;
-    background-image: url(../images/lab.png);
-    background-size: contain;
-    background-repeat: no-repeat;
-    background-position: center bottom;
-    min-height: 100vh;
+body {
+  background-color: #ffcc00;
+  color: #fff;
+  font-family: "bimbo_jve", "Roboto", sans-serif;
+  background-image: linear-gradient(
+      90deg,
+      #ffcc00 40%,
+      rgba(255, 204, 0, 0) 100%
+    ),
+    url(../images/splatter.png);
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: top right;
+  min-height: 100vh;
 }
 
-@media only screen and (max-width: 760px){
-    body{
-        background-image: none;
-    }
+@media only screen and (max-width: 760px) {
+  body {
+    background-image: none;
+  }
 }
 
-.bg-semi-transparent{
-    background-color: rgba(0, 0, 0, 0.9);
+.header {
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  background-color: #990134;
+  line-height: 23px;
+  font-weight: 500;
+  width: 100%;
+  box-shadow: 0 1px 0 rgb(0 0 0 / 10%);
 }
 
-.button.default{
-    background-color: #ffffff;
-    color: #000;
-    padding: 8px 25px;
-    text-align: center;
-    border-radius: 5px;
+.logo img {
+  width: 6rem;
 }
 
-.button.secondary{
-    border: 1px solid #333;
-    background-color: #111;
-    padding: 10px 10px;
-    border-radius: 5px;
-    margin-bottom: 8px;
-    color: #888;
+.logo {
+  padding: 1rem 0;
 }
 
-.button.secondary:hover{
-    background-color: #333;
-    color: #fff;
+.wallet-btn {
+  background-color: #009453;
+  padding: 15px;
+  border-radius: 8px;
+  color: #ffcc00;
+  font-family: "bimbo_jve";
 }
 
-.input-qty{
-    border: 1px solid #333;
-    background-color: #111;
-    border-radius: 5px;
-    color: #888;
-    width: 100%;
+.main-wrapper {
+  margin: 6rem auto;
+  display: flex;
+  justify-content: space-between;
+  width: 80%;
 }
 
-.input-qty-label{
-    padding: 10px 10px;
-    border-right: 1px solid #333;
+.left-side {
+  border: 1px solid red;
+  width: 60%;
 }
 
-.input-qty input{
-    background: transparent;
-    margin-left: 10px;
-    padding: 10px 5px;
-    outline: none;
-}
-
-
-.col-1{
-    max-width: 960px;
-    margin: 0 auto;
-}
-
-h2{
-    font-weight: 500;
-    font-size: 1.3em;
-    font-family: eurostile, sans-serif;
-    margin-bottom: 1em;
-    line-height: 1.1em;
-    text-transform: uppercase;        
-}
-
-.radio-currency{
-    border: 1px solid #333;
-    background-color: #111;
-    padding: 10px 10px;
-    border-radius: 5px;
-    margin-bottom: 8px;
-    color: #888;
-    cursor: pointer;
-}
-
-.radio-currency:hover{
-    background-color: #333;
-    color: #fff;
-}
-
-
-.radio-currency.active{
-    border: 1px solid #fff;
-    color: #fff;
-}
-
-
-
-.radio-currency span{
-    display: block;
-    position: relative;
-    padding-left: 25px;
-}
-
-.radio-currency span::before{
-    content: '';
-    position: absolute;
-    left: 0;
-    top: 4px;
-    border-radius: 50%;
-    display: block;
-    background-color: #000;
-    border: 1px solid #333;
-    width: 15px;
-    height: 15px;
-}
-
-.radio-currency.active span::before{
-    background-color: #bdaf00;
-}
-
-
-.intro{
-    font-family: Menlo, monospace;
-}
-
-.border-yellow{
-    border: 3px solid #BFCF42;
-    border-radius: 10px;
-}
-
-.border-blue{
-    border: 3px solid #768EBC;
-    border-radius: 10px;
-}
-
-
-#walletconnect-wrapper{
-    color: #000;
+.right-side img {
+  width: 20rem;
 }
